--- a/src/app/shared/components/toolbar/app.topbar.component.html
+++ b/src/app/shared/components/toolbar/app.topbar.component.html
@@ -13,7 +13,7 @@
       style="margin-left: unset"
       class="p-link layout-topbar-button"
     >
-      <i class="pi pi-home"></i>
+      home
     </a>
   </div>
   <div
@@ -36,19 +36,19 @@
     style="margin-left: 10px"
     class="layout-topbar-menu"
   >
-    <a
+    <a 
       [routerLink]="'landing'"
-      style="margin-left: unset"
-      class="p-link layout-topbar-button"
+      style="margin-left: unset;width:120px;font-size:20px"
+      class="p-link layout-topbar-button menu_css" routerLinkActive="active"
     >
-      <i class="pi pi-home"></i>
+      home
     </a>
-    <a
+    <a 
       routerLink="dashboard"
-      style="margin-left: unset"
-      class="p-link layout-topbar-button"
+      style="margin-left:30px;width:120px"
+      class="p-link layout-topbar-button menu_css" routerLinkActive="active"
     >
-      <i class="pi pi-person"></i>
+     dashboard
     </a>
   </div>
   <div
