--- a/src/app/shared/components/toolbar/app.topbar.component.scss
+++ b/src/app/shared/components/toolbar/app.topbar.component.scss
@@ -1,86 +1,59 @@
-.css-a6b3rd {
-    margin: 0;
-    font-family: Inter,Arial;
-    font-weight: 400;
-    letter-spacing: 0.009375rem;
-    line-height: 143%;
-    font-size: 0.875rem;
-    color: #383D51;
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    display: -webkit-inline-box;
-    display: -webkit-inline-flex;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    position: relative;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    background-color: transparent;
-    outline: 0;
-    border: 0;
-    margin: 0;
-    border-radius: 0;
-    padding: 0;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    vertical-align: middle;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    color: inherit;
-    min-width: 64px;
-    padding: 6px 8px;
-    border-radius: 4px;
-    -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    color: #383D51;
-    box-shadow: none;
-    border-radius: 4px;
-    font-family: Inter,Arial;
+.menu_css {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  background-color: transparent;
+  outline: 0;
+  border: 0;
+
+  cursor: pointer;
+
+  user-select: none;
+  vertical-align: middle;
+
+  text-decoration: none;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  color: #383d51;
+  box-shadow: none;
+  border-radius: 4px;
+  font-family: Inter, Arial;
+  font-weight: 500;
+  line-height: 1.5rem;
+  font-size: 0.875rem;
+  padding: 6px 12px;
+  color: #f1f1f3;
+  padding: 6px 8px;
+  position: relative;
 }
 
-.css-w0pj6f {
-    overflow: hidden;
-    pointer-events: none;
-    position: absolute;
-    z-index: 0;
-    inset: 0px;
-    border-radius: inherit;
+.menu_css:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  -webkit-transform: scaleX(0);
+  -moz-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  background: linear-gradient(248.86deg, #b6509e 10.51%, #2ebac6 93.41%);
+  transform-origin: bottom right;
+  -webkit-transition: -webkit-transform 0.25s ease-out;
+  transition: transform 0.25s ease-out;
 }
 
-.css-a6b3rd:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    -webkit-transform: scaleX(0);
-    -moz-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    transform: scaleX(0);
-    height: 2px;
-    bottom: -6px;
-    left: 0;
-    background: linear-gradient(248.86deg, #B6509E 10.51%, #2EBAC6 93.41%);
-    transform-origin: bottom right;
-    -webkit-transition: -webkit-transform 0.25s ease-out;
-    transition: transform 0.25s ease-out;
+.active.menu_css:after,
+.menu_css:hover.menu_css:after {
+  -webkit-transform: scaleX(1);
+  -moz-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
-.active.css-a6b3rd:after, .css-a6b3rd:hover.css-a6b3rd:after {
-    -webkit-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
