--- a/src/app/pages/credit-marketplace/credit-marketplace.component.html
+++ b/src/app/pages/credit-marketplace/credit-marketplace.component.html
@@ -1,1 +1,20 @@
-<p>credit-marketplace works!</p>
+<div class="grid justify-content-center flex-column align-items-center">
+    <h3>Credit Marketplace</h3>
+  <div class="col-12">
+    <div style="position: relative; border-color: transparent" class="card">
+      <!-- <h5>
+  
+          Dashboard
+        </h5> -->
+
+      <div style="margin-top: 20px" class="grid p-fluid"></div>
+
+      <div class="col-12">
+        <credit-table *ngIf="credits!= undefined && credits.length > 0" [creditType]="'none'" [credits]="credits"  ></credit-table>
+      
+     
+
+      </div>
+    </div>
+  </div>
+</div>
