--- a/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
+++ b/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
@@ -1,32 +1,57 @@
 <div class="grid">
-    <div class="col-5">
-      <span>'hola'</span>
-
-      
-    <p-steps class="col-12" [model]="stepItems" (activeIndexChange)="activeStep = 0" [(activeIndex)]="activeStep" styleClass="mt-5" [readonly]="false"></p-steps>
-    <div style="min-height: 100px; width: 100%; text-align: center" class="flex justify-content-center flex-column">
+  <div style="border:unset;" class="col-12 card">
+    <div  class="card credit-cockpit">
+      <div class="grid p-fluid">
+        <div class="col-12 mb-2 lg:col-4 lg:mb-0">
+          <input pInputText type="text"  [disabled]="true"  style="border-color:green;background: grey;" value="hola" placeholder="Default" />
+        </div>
+        <div class="col-12 mb-2 lg:col-4 lg:mb-0">
+          <input pInputText type="text"  [disabled]="true"  style="border-color:green;background: grey;" value="hola" placeholder="Default" />
+        </div>
+        <div class="col-12 mb-2 lg:col-4 lg:mb-0">
+          <input pInputText type="text"  [disabled]="true"  style="border-color:green;background: grey;" value="hola" placeholder="Default" />
+        </div>
+    </div>
+    </div>
+   
+  <div class="col-12">
+    <div class="card">
+    <p-steps
+      class="col-12"
+      [model]="stepItems"
+      (activeIndexChange)="activeStep = 0"
+      [(activeIndex)]="activeStep"
+      styleClass="mt-5"
+      [readonly]="false"
+    ></p-steps>
+  </div>
+    <div
+      style="min-height: 100px; width: 100%; text-align: center"
+      class="flex justify-content-center flex-column"
+    >
       <div *ngIf="activeStep == 0">
         <div *ngIf="display_step == 0">
-          <p [ngStyle]="{ lineHeight: '2.5rem' }"> Current Amount </p>
+          <p [ngStyle]="{ lineHeight: '2.5rem' }">Current Amount</p>
           <button
-          pButton
-          pRipple
-          style="margin: auto"
-          (click)="checkInPhase1()"
-          type="button"
-          label="Start"
-          class="p-button-rounded mr-2 mb-2"
-        ></button>
+            pButton
+            pRipple
+            style="margin: auto"
+            (click)="checkInPhase1()"
+            type="button"
+            label="Start"
+            class="p-button-rounded mr-2 mb-2"
+          ></button>
         </div>
         <div *ngIf="display_step > 0">
           <p [ngStyle]="{ lineHeight: '2.5rem' }"></p>
         </div>
       </div>
-      </div>
-    
-
     </div>
-    <div class="col-5">
-        <lens-profile></lens-profile>
-    </div>
+  </div>
+  <div class="col-6">
+    <lens-profile></lens-profile>
+  </div>
+  <div class="col-6">
+    <lens-profile></lens-profile>
+  </div>
 </div>
