--- a/src/app/shared/components/credit-table/credit-table/credit-table.component.html
+++ b/src/app/shared/components/credit-table/credit-table/credit-table.component.html
@@ -5,6 +5,19 @@
       
             <p-table  [value]="credits" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
+                    <tr *ngIf="creditType=='none'">
+                        <th>Id</th>
+                        <th>Requester </th>
+                        <th>Amount</th>
+                        <th> Rate</th>
+                        <th>Amount to Delegate</th>
+                        <th> Finish Voting Period</th>
+
+                        <th style="text-align:center"> Delegators Checked In</th>
+             
+                        <th style="text-align: center;width: 10%;"> Action</th>
+                        <th style="text-align: center;"> Status</th>
+                    </tr>
                     <tr *ngIf="creditType=='delegated'">
                         <th>Id</th>
                         <th>Requester </th>
@@ -31,6 +44,38 @@
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-credit>
+                    <tr *ngIf="creditType=='none'" style="text-align:center">
+                        <td style="width: 5%; min-width: 5rem;">
+                            {{credit.id}}
+                        </td>
+                        <td style="width: 15%; ">{{displayAddress(credit.requester.member)}}</td>
+                        <td style="width: 10%; ">{{credit.amount}}$</td>
+                        <td style="width: 5%;">{{credit.rate}}%</td>
+                        <td style="width: 10%;">{{credit.delegatorsAmount}}$</td>
+                        <td style="width: 25%;">{{blockTimeToTime(credit.finishPhaseTimestamp)}}</td>
+
+                        <td style="width: 10%; min-width: 2rem;text-align:center">{{credit.delegatorsNr}} of ({{credit.delegatorsRequired}})</td>
+
+
+
+
+                        <!-- <td  style="width: 10%;">
+                            <button pButton pRipple type="button" (click)="goToCredit(credit.id)" icon="pi pi-search" class="p-button p-component p-button-text p-button-icon-only"></button>
+                        </td> -->
+                        <td style="width: 15%;text-align:center">
+                            <button pButton pRipple type="button" icon="pi pi-search"
+                                (click)="goToCredit(credit.id)" label="Stop"
+                                class="p-button p-component p-button-text  p-button-icon-only"></button>
+
+                        </td>
+
+                     
+                        <td style="width: 5%; min-width: 5rem;text-align:center">
+                            <div [style.background]=" [1,2,3,4].indexOf(credit.status) != 1 ? 'orange' : credit.status == 5 ?  'green' : 'red'"
+                                style="height:40px;width:40px;border-radius:20px;margin: auto;background: green;"></div>
+                        </td>
+
+                    </tr>
                     <tr *ngIf="creditType=='delegated'" style="text-align:center">
                         <td style="width: 5%; min-width: 5rem;">
                             {{credit.id}}
@@ -62,7 +107,7 @@
                      
                         <td style="width: 5%; min-width: 5rem;text-align:center">
                             <div [style.background]="credit.status == 1 ? 'orange' : credit.status == 2 ?  'green' : 'red'"
-                                style="height:40px;width:40px;border-radius:20px;background: green;"></div>
+                                style="height:40px;width:40px;border-radius:20px;margin: auto;background: green;"></div>
                         </td>
 
                     </tr>
@@ -88,7 +133,7 @@
 
                         <td style="width: 10%; min-width: 5rem;text-align:center">
                             <div [style.background]="credit.status == 1 ? 'orange' : credit.status == 2 ?  'green' : 'red'"
-                                style="height:40px;width:40px;border-radius:20px;background: green;"></div>
+                                style="height:40px;width:40px;border-radius:20px;margin: auto;background: green;"></div>
                         </td>
 
                     </tr>
