--- a/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
+++ b/src/app/shared/components/credit-summary/credit-summary/credit-summary.component.html
@@ -133,8 +133,40 @@
       <h5 style="margin: 20px auto 5px" class="mb-1">
         <i (click)="doRefresh()" style="color: var(--primary-color); font-size: 30px;cursor:pointer;margin-right:10px" class="pi pi-refresh"></i>  Payment Plan <span style="color: var(--primary-color)"> Payment Plan </span> 
       </h5>
+
+      <div style="margin-top:20px">
+          <div   *ngFor="let installment of credit.installments">
+            <div class="flex justify-content-center align-items-center">
+          <span style="width:150px">  Installment #{{installment.nr}}</span> 
+          <span style="width:250px;">{{blockTimeToTime(+installment.timestamp)}} </span>
+   
+          <div 
+          style="margin: 10px 30px;height: 30px; width: 30px;border-radius: 20px;  background: green;"></div>
+          </div>
+          </div>
+      </div>
       </div>
  
+
+      <div  *ngIf="display_step == 9 " style="height:420px" class="text-center card">
+        <h5 style="margin: 20px auto 5px" class="mb-1">
+          <i (click)="doRefresh()" style="color: var(--primary-color); font-size: 30px;cursor:pointer;margin-right:10px" class="pi pi-refresh"></i>  Credit <span style="color: var(--primary-color)">LIQUIDATED </span> 
+        </h5>
+  
+        <div style="margin-top:20px">
+            <div   *ngFor="let installment of credit.installments">
+              <div class="flex justify-content-center align-items-center">
+            <span style="width:150px">  Installment #{{installment.nr}}</span> 
+            <span style="width:250px;">{{blockTimeToTime(+installment.timestamp)}} </span>
+     
+            <div 
+            style="margin: 10px 30px;height: 30px; width: 30px;border-radius: 20px;  background: green;"></div>
+            </div>
+            </div>
+        </div>
+        </div>
+
+
   <div class="col-6">
    <!-- // <lens-profile [profile]="profile" > </lens-profile> -->
   </div>
